Align popup cart on page load to avoid unnecessary horizontal page scrolling    fix other items in the globalnav that now shift when the window size is below 970px
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@78687 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/locationbar_fdx.css
+++ b/projects/Media/docroot/assets/css/common/locationbar_fdx.css
@@ -14,6 +14,7 @@
 		max-height: 42px; /* fix height for browse pages */
 		margin-top: 0px;
 		font-family: Verdana;
+		min-width: 970px;
 	}
 	#sidecartbuttons {
 		display: none;
@@ -245,6 +246,7 @@
 		position: relative;
 		padding: 10px 0;
 		margin-top: 0;
+		min-width: 970px;
 	}
 	.globalnav_top .topnavitem {
         /*float: right; */
@@ -508,7 +510,7 @@
 	height: 20px;
 	width: 18px;
 	background-repeat: no-repeat;
-    position: relative;
+	position: relative;
 }
 .locabar-user {
 	display: inline-block;
